--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-
-
-
-spring.datasource.url=jdbc:mysql://localhost:3306/local_user
+spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=root
 spring.datasource.password=root
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+logging.level.org.hibernate.SQL=DEBUG
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
